Ändrat script bootstrap,adderat hover effekt

--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -24,6 +24,20 @@
       background-color: #f2f2f2;
       padding: 25px;
     }
+        .btn-primary:hover {
+      background: #e50404;
+      color:  #fff;
+   }
+
+   .panel-primary:hover {
+    border-color: #e50404;
+}
+
+.panel-primary>.panel-heading:hover
+    {
+    background-color: #e50404;
+               color:  black;
+    }
   </style>
 </head>
 <body>
