ändrat text och färg på frontpage.html och product.html

--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Loppisshoppis</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -65,16 +65,17 @@
         </div>
     </div>
 </div>
+<body style="background-color:azure;">
 
-<div class="jumbotron">
-    <div class="container text-center">
-        <h1>Online Store</h1>
-        <p>Mission, Vission & Values</p>
+<div class="jumbotron" style="background-color:seashell">
+    <div class="container text-center" style="color:black">
+        <h1><b>Loppisshoppis </b></h1>
+        <p><i>Personligt - miljövänligt - prisvärt</i></p>
     </div>
 </div>
 
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color:steelblue;">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
@@ -85,15 +86,17 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="#">Deals</a></li>
-                <li><a href="#">Deals</a></li>
-                <li><a href="#">Stores</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Kläder</a></li>
+                <li><a href="#">Hem & inredning</a></li>
+                <li><a href="#">Böcker</a></li>
+                <li><a href="#">Hobby</a></li>
+                <li><a href="#">Vintage</a></li>
+                <li><a href="#">Om oss</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
             </ul>
         </div>
     </div>
