--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -49,15 +49,17 @@
   </div>
 </div>
 
-<div class="jumbotron">
-  <div class="container text-center">
-    <h1>Online Store</h1>
-    <p>Mission, Vission & Values</p>
+<body style="background-color:azure;">
+
+<div class="jumbotron" style="background-color:seashell">
+  <div class="container text-center" style="color:black">
+    <h1><b>Loppisshoppis </b></h1>
+    <p><i>Personligt - miljövänligt - prisvärt</i></p>
   </div>
 </div>
 
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <div class="container-fluid" style="background-color:steelblue;">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -68,11 +70,13 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Deals</a></li>
-        <li><a href="#">Stores</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">Kläder</a></li>
+        <li><a href="#">Hem & inredning</a></li>
+        <li><a href="#">Böcker</a></li>
+        <li><a href="#">Hobby</a></li>
+        <li><a href="#">Vintage</a></li>
+        <li><a href="#">Om oss</a></li>
+      </ul>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
