--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -95,6 +95,7 @@
 
       <h2><th th:text="${product.name}"></th></h2>
       <h3><th th:text="${product.price} + ' kr'"></th></h3>
+      <h4><th th:text="${product.description}"></th></h4>
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
         Köp
       </button>
