--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Loppisshoppis</title>
+    <title>LoppisShoppis</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -81,10 +81,9 @@ img:hover {
 </body>
 <body style="background-color:azure;">
 
-<div class="jumbotron" style="background-color:seashell">
+<div class="jumbotron" style="background-color:#D6E9F0">
     <div class="container text-center" style="color:black">
-        <h1><b>Loppisshoppis </b></h1>
-        <p><i>Personligt - miljövänligt - prisvärt</i></p>
+        <img src="/images/loppisshoppis3.png" height="300">
     </div>
 </div>
 
