--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -58,26 +58,46 @@
   </div>
 </div>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid" style="background-color:steelblue;">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Kläder</a></li>
-        <li><a href="#">Hem & inredning</a></li>
-        <li><a href="#">Böcker</a></li>
-        <li><a href="#">Hobby</a></li>
-        <li><a href="#">Vintage</a></li>
-        <li><a href="#">Om oss</a></li>
+<div class="collapse navbar-collapse" id="myNavbar">
+  <ul class="nav navbar-nav">
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Nyinkommet</a></li>
+        <li><a href="#">Sommarkläder</a></li>
+        <li><a href="#">Rabatterade varor</a></li>
       </ul>
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hem & inredning<span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Möbler</a></li>
+        <li><a href="#">Akvarium</a></li>
+        <li><a href="#">Tavlor</a></li>
       </ul>
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Astrid Lindgrens Kollektion</a></li>
+        <li><a href="#">Antika Grekland</a></li>
+        <li><a href="#">Sci-Fi</a></li>
+      </ul>
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Frimärke</a></li>
+        <li><a href="#">Friluft</a></li>
+        <li><a href="#">Test</a></li>
+      </ul>
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vintage <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">1920-1950</a></li>
+        <li><a href="#">1950-1970</a></li>
+        <li><a href="#">1970-2000</a></li>
+      </ul>
+    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Vision</a></li>
+        <li><a href="#">Historia</a></li>
+        <li><a href="#">Vet ej</a></li>
+      </ul>
+  </ul>
+
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Your Account</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Cart</a></li>
