--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -151,7 +151,7 @@ img:hover {
                     <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
                     <a class="btn btn-primary " th:href="'/product/' + ${product.id}" style="cursor: pointer;">Mer info</a>
 
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" onclick="addProduct()">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
                         Köp
                     </button>
                 </div>
@@ -159,6 +159,9 @@ img:hover {
         </div>
     </div>
 </div><br><br>
+
+<div id="test">
+</div>
 
 <footer class="container-fluid text-center">
     <p>Online Store Copyright</p>
