--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -5,85 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-    /* Remove the navbar's default rounded borders and increase the bottom margin */
-    .navbar {
-      margin-bottom: 50px;
-      border-radius: 0;
-    }
 
-    /* Remove the jumbotron's default bottom margin */
-     .jumbotron {
-      margin-bottom: 0;
-    }
-
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-        .btn-primary:hover {
-      background:  #2098ff;
-      color:  #fff;
-   }
-
-   .panel-primary:hover {
-    border-color:  #2098ff;
-}
-
-.panel-primary>.panel-heading {
-    background-color: #3190B5;
-}
-
-.panel-primary>.panel-heading:hover
-    {
-    background-color:  #2098ff;
-               color:  white;
-    }
-
-  .img {
-  padding: 50px;
-  background-color: green;
-  transition: transform .2s; /* Animation */
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-  }
-
-.panel img:hover {
-  transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-
-}
-
-
-/* Tillagt för att centrera bilder på varor och ge dem samma höjd */
-#productimg {
-    padding: 10px;
-    margin: 0 auto;
-    height: 250px;
-}
-/* KOPIA AV PRODUCT.HTML */
-
-/* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #D6E9F0;
-      padding: 25px;
-    }
-
-    #footerbtn {
-      background-color: #FFDD5C;
-      border-color: #FFDD5C;
-      color: #0E2A36
-    }
-
-#myCarousel {
-    padding: 10px;
-}
   </style>
 </head>
-<body style="background-color: #D6E9F0;">>
+<body>
 
 <!-- Button trigger modal -->
 
@@ -110,12 +39,14 @@
     </div>
 </div>
 
+<!-- Header with logo -->
 <div class="jumbotron" style="background-color:#D6E9F0">
     <div class="container text-center" style="color:black">
         <img onclick="location.href='/';" style="cursor: pointer;" src="/images/loppisshoppis3.png" height="300">
     </div>
 </div>
 
+<!-- Navbar -->
 <nav class="navbar navbar-inverse">
     <div class="container-fluid" style="background-color:#0E2A36;">
         <div class="navbar-header">
@@ -175,7 +106,7 @@
     </div>
 </nav>
 
-<!--CAROUSEL TEST -->
+<!--Carousel -->
 <div class="container">
     <h2>Tips inför Halloween!</h2>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -233,33 +164,7 @@
     </div>
 </div>
 <br>
-<!--
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="panel panel-danger">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="panel panel-success">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-    </div>
-</div><br>
--->
+
 <div class="container">
     <div class="row">
         <div class="productlisting" th:each="product : ${products}">
