--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,30 +1,72 @@
+/*
+Color scheme:
+    Blue: #3190B5
+    Dark blue: #0E2A36      (e.g. navbar)
+    Light blue: #D6E9F0     (e.g. background)
+    Green: #257D5E          (e.g. logo)
+    Yellow: #FFDD5C         (e.g. for alerts)
+*/
+
+/***** Styling for all pages *****/
 
 body {
     background-color: #D6E9F0;
 }
 
-/* Remove the navbar's default rounded borders and increase the bottom margin */
-    .navbar {
-      margin-bottom: 50px;
-      border-radius: 0;
-    }
-
+/* Header */
+.jumbotron {
+    background-color: #D6E9F0;
     /* Remove the jumbotron's default bottom margin */
-     .jumbotron {
-      margin-bottom: 0;
-    }
+    margin-bottom: 0;
+}
 
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-        .btn-primary:hover {
-      background:  #2098ff;
-      color:  #fff;
-   }
+.jumbotron img {
+    cursor: pointer;
+}
 
-   .panel-primary:hover {
+/* Navbar */
+.navbar {
+    background-color: #0E2A36;
+    /* Remove the navbar's default rounded borders and increase the bottom margin */
+    margin-bottom: 50px;
+    border-radius: 0;
+}
+
+/* Footer */
+footer {
+    background-color: #D6E9F0;
+    padding: 25px;
+}
+
+#footerbtn {
+    /* Button for newsletter sign-up in the footer */
+    background-color: #FFDD5C;
+    border-color: #FFDD5C;
+    color: #0E2A36
+}
+
+
+
+/***** Styling for frontpage *****/
+
+/* Carousel */
+#myCarousel {
+    padding: 10px;
+}
+
+.carousel-inner .item img {
+    height: 400px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+/* Product listing */
+.btn-primary:hover {
+    background:  #2098ff;
+    color:  #fff;
+}
+
+.panel-primary:hover {
     border-color:  #2098ff;
 }
 
@@ -32,77 +74,48 @@ body {
     background-color: #3190B5;
 }
 
-.panel-primary>.panel-heading:hover
-    {
+.panel-primary>.panel-heading:hover {
     background-color:  #2098ff;
                color:  white;
-    }
-
-  .img {
-  padding: 50px;
-  background-color: green;
-  transition: transform .2s; /* Animation */
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-  }
-
-.panel img:hover {
-  transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-
 }
 
+.img {
+    padding: 50px;
+    background-color: green;
+    transition: transform .2s; /* Animation */
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+}
 
-/* Tillagt för att centrera bilder på varor och ge dem samma höjd */
+.panel img:hover {
+    /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.3);
+}
+
 #productimg {
+    /* Centers the product image and gives all product images the same height */
     padding: 10px;
     margin: 0 auto;
     height: 250px;
-}
-/* KOPIA AV PRODUCT.HTML */
-
-/* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #D6E9F0;
-      padding: 25px;
-    }
-
-    #footerbtn {
-      background-color: #FFDD5C;
-      border-color: #FFDD5C;
-      color: #0E2A36
-    }
-
-#myCarousel {
-    padding: 10px;
+    cursor: pointer;
 }
 
-/* Copied from product.html */
 
-    /* Remove the navbar's default rounded borders and increase the bottom margin */
-    .navbar {
-      margin-bottom: 50px;
-      border-radius: 0;
-    }
 
-    /* Remove the jumbotron's default bottom margin */
-     .jumbotron {
-      margin-bottom: 0;
-    }
+/***** Styling for product page *****/
 
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #D6E9F0;
-      padding: 25px;
-    }
+#buybtn{
+    background-color: #3190B5;
+}
 
-    #footerbtn {
-      background-color: #FFDD5C;
-      border-color: #FFDD5C;
-      color: #0E2A36
-    }
+#large-productimg {
+    width:100%;
+}
 
-    #buybtn{
-      background-color: #3190B5;
 
-    }
+
+
+
+
+
