--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
@@ -13,9 +13,6 @@
   </style>
 </head>
 <body>
-
-<!-- Button trigger modal -->
-
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -40,15 +37,15 @@
 </div>
 
 <!-- Header with logo -->
-<div class="jumbotron" style="background-color:#D6E9F0">
-    <div class="container text-center" style="color:black">
-        <img onclick="location.href='/';" style="cursor: pointer;" src="/images/loppisshoppis3.png" height="300">
+<div class="jumbotron">
+    <div class="container text-center">
+        <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
     </div>
 </div>
 
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid" style="background-color:#0E2A36;">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
@@ -121,32 +118,23 @@
         <div class="carousel-inner">
 
             <div class="item active">
-                <img src="/images/skelett.png" alt="Halloween-dekoration: skelett" style="height: 400px; margin: 0 auto; cursor: pointer;"
-                     onclick="location.href='/product/7'">
+                <img src="/images/skelett.png" alt="Halloween-dekoration: skelett" onclick="location.href='/product/7'">
                 <div class="carousel-caption">
-<!--                    <h3>Los Angeles</h3>
-                    <p>LA is always so much fun!</p>
-                    -->
+                    <!-- Space for description on image-->
                 </div>
             </div>
 
             <div class="item">
-                <img src="/images/pumpalykta.png" alt="Halloween-dekoration: värmeljuslykta" style="height: 400px; margin: 0 auto; cursor: pointer;"
-                     onclick="location.href='/product/6'">
+                <img src="/images/pumpalykta.png" alt="Halloween-dekoration: värmeljuslykta" onclick="location.href='/product/6'">
                 <div class="carousel-caption">
-                    <!--                    <h3>Chicago</h3>
-                                        <p>Thank you, Chicago!</p>
-                    -->
+                    <!-- Space for description on image-->
                 </div>
             </div>
 
             <div class="item">
-                <img src="/images/halloweenhaxa.png" alt="Halloween-dekoration: häxa" style="height: 400px; margin: 0 auto; cursor: pointer;"
-                     onclick="location.href='/product/5'">
+                <img src="/images/halloweenhaxa.png" alt="Halloween-dekoration: häxa" onclick="location.href='/product/5'">
                 <div class="carousel-caption">
-                    <!--                  <h3>New York</h3>
-                                      <p>We love the Big Apple!</p>
-                                      -->
+                    <!-- Space for description on image-->
                 </div>
             </div>
 
@@ -165,20 +153,24 @@
 </div>
 <br>
 
+<!-- Product listing -->
 <div class="container">
     <div class="row">
         <div class="productlisting" th:each="product : ${products}">
             <div class="col-sm-4">
                 <div class="panel panel-primary stretched-link" id="productpanel">
+
                     <div class="panel-heading" th:text="${product.name}" href="'/product/' + ${product.id}"></div>
-                        <div class="panel-body">
+
+                    <div class="panel-body">
                             <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
                         </div>
-                    <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
-                    <a class="btn btn-primary " th:href="'/product/' + ${product.id}" style="cursor: pointer;">Mer info</a>
 
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
-                        Köp
+                    <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
+
+                    <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                            th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">Köp
                     </button>
                 </div>
             </div>
@@ -189,6 +181,7 @@
 <div id="test">
 </div>
 
+<!-- Footer -->
 <footer class="container-fluid text-center">
     <p>Bli en återvinnare!</p>
     <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
