--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title th:text="${product.name}"></title>
+  <title th:text="'LoppisShoppis: ' + ${product.name}"></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
@@ -14,6 +14,7 @@
   </style>
 </head>
 <body>
+
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -37,15 +38,15 @@
 </div>
 
 <!-- Header with logo -->
-<div class="jumbotron" style="background-color:#D6E9F0">
-  <div class="container text-center" style="color:black">
-    <img onclick="location.href='/';" style="cursor: pointer;" src="/images/loppisshoppis3.png" height="300">
+<div class="jumbotron">
+  <div class="container text-center">
+    <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
   </div>
 </div>
 
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid" style="background-color:#0E2A36;">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -107,7 +108,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <img th:src="${product.image}" class="img-responsive" style="width:100%" alt="Image">
+      <img th:src="${product.image}" class="img-responsive" id="large-productimg"  alt="Image">
     </div>
     <div class="col-md-6">
 
