Lagt till nya kategorier för html sidor, lagt till om oss, ändrat länkar och ref.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -114,6 +114,13 @@ footer {
 }
 
 
+#treeimg{
+  width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 
 
