--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -52,7 +52,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -70,9 +70,9 @@
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Astrid Lindgrens Kollektion</a></li>
-                        <li><a href="#">Antika Grekland</a></li>
-                        <li><a href="#">Sci-Fi</a></li>
+                        <li><a href="/AstridLindgrenCollection">Astrid Lindgrens Kollektion</a></li>
+                        <li><a href="/AnticGreece">Antika Grekland</a></li>
+                        <li><a href="/Sci-Fi">Sci-Fi</a></li>
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -86,9 +86,9 @@
                         <li><a href="#">1950-1970</a></li>
                         <li><a href="#">1970-2000</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" onclick="location.href='/AboutUs';" style="cursor: pointer;">Om oss <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Vision</a></li>
+                        <li><a href="/AboutUs">Vision</a></li>
                         <li><a href="#">Historia</a></li>
                         <li><a href="#">Vet ej</a></li>
                     </ul>
