--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -187,7 +187,8 @@
     </table>
 
     <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="emptyCart()">Töm vagnen</button>
-  </div>
+    <a href="/checkout" class="btn btn-primary">Betala</a>
+</div>
 
 <!-- Footer -->
 <footer class="container-fluid text-center">
