--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -95,9 +95,9 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><span id="cartsum">0</span></li>
+                <li></li>
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
+                <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"><span id="cartsum" class="productcounter">0</span></span> Varukorg</a></li>
             </ul>
         </div>
     </div>
@@ -177,9 +177,6 @@
         </div>
     </div>
 </div><br><br>
-
-<div id="test">
-</div>
 
 <footer class="container-fluid text-center">
     <p>Bli en återvinnare!</p>
