--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -19,18 +19,20 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h4 class="modal-title" id="exampleModalLabel"> En vara har lagts till i varukorgen: </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
 
             <div class="modal-body">
-                Varan tillagd i varukorgen!
+                <ul>
+                    <li> Detta behöver uppdateras med en lista av varor </li>
+                </ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+                <button type="button" class="btn btn-primary">Gå till varukorgen</button>
             </div>
         </div>
     </div>
@@ -163,8 +165,8 @@
                     <div class="panel-heading" th:text="${product.name}" href="'/product/' + ${product.id}"></div>
 
                     <div class="panel-body">
-                            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
-                        </div>
+                        <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
+                    </div>
 
                     <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
 
