--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -1,176 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>LoppisShoppis</title>
+  <title>Checkout</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
-    /* Remove the navbar's default rounded borders and increase the bottom margin */
-    .navbar {
-      margin-bottom: 50px;
-      border-radius: 0;
-    }
-
-    /* Remove the jumbotron's default bottom margin */
-     .jumbotron {
-      margin-bottom: 0;
-    }
-
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-        .btn-primary:hover {
-      background:  #2098ff;
-      color:  #fff;
-   }
-
-   .panel-primary:hover {
-    border-color:  #2098ff;
-}
-
-.panel-primary>.panel-heading {
-    background-color: #3190B5;
-}
-
-.panel-primary>.panel-heading:hover
-    {
-    background-color:  #2098ff;
-               color:  white;
-    }
-
-  .img {
-  padding: 50px;
-  background-color: green;
-  transition: transform .2s; /* Animation */
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-  }
-
-.panel img:hover {
-  transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-
-}
-
-
-/* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #D6E9F0;
-      padding: 25px;
-    }
-
-    #footerbtn {
-      background-color: #FFDD5C;
-      border-color: #FFDD5C;
-      color: #0E2A36
-    }
-
-}
-<-- css för chekout-formuläret -->
-
-h3 {
-    font-family: "Segoe UI",Arial,sans-serif;
-    font-weight: 400;
-}
-
-  .row {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-  margin: 0 -16px;
-}
-
-.col-25 {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
-}
-
-.col-50 {
-  -ms-flex: 50%; /* IE10 */
-  flex: 50%;
-}
-
-.col-75 {
-  -ms-flex: 75%; /* IE10 */
-  flex: 75%;
-}
-
-.col-25,
-.col-50,
-.col-75 {
-  padding: 0 16px;
-}
-
-.container {
-  background-color: #f2f2f2;
-  padding: 5px 20px 15px 20px;
-  border: 1px solid lightgrey;
-  border-radius: 3px;
-  margin-left: 200px;
-  margin-right: 200px;
-}
-
-input[type=text] {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-label {
-  margin-bottom: 10px;
-  display: block;
-}
-
-.icon-container {
-  margin-bottom: 20px;
-  padding: 7px 0;
-  font-size: 24px;
-}
-
-.btn {
-  background-color: #04AA6D;
-  color: white;
-  padding: 12px;
-  margin: 10px 0;
-  border: none;
-  width: 100%;
-  border-radius: 3px;
-  cursor: pointer;
-  font-size: 17px;
-}
-
-.btn:hover {
-  background-color: #45a049;
-}
-
-span.price {
-  float: right;
-  color: grey;
-}
-
-
 
   </style>
 </head>
-<body style="background-color: #D6E9F0;">
-
-
-<div class="jumbotron" style="background-color:#D6E9F0">
-  <div class="container-header text-center" style="color:black">
-    <img onclick="location.href='/';" style="cursor: pointer;" src="/images/loppisshoppis3.png" height="300">
+<body>
+<!-- Header with logo -->
+<div class="jumbotron">
+  <div class="container text-center">
+    <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
   </div>
 </div>
 
+<!-- Navbar -->
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid" style="background-color:#0E2A36;">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -232,8 +84,25 @@ span.price {
 
 <div class="row">
   <div class="col-75">
-    <div class="container">
+    <div class="container-form">
       <form action="/action_page.php">
+
+        <div class="col-25">
+          <div class="container-form">
+            <h4>Dina varor
+              <span class="price" style="color:black">
+          <i class="fa fa-shopping-cart"></i>
+          <b>4</b>
+        </span>
+            </h4>
+            <p><a href="#">Product 1</a> <span class="price">$15</span></p>
+            <p><a href="#">Product 2</a> <span class="price">$5</span></p>
+            <p><a href="#">Product 3</a> <span class="price">$8</span></p>
+            <p><a href="#">Product 4</a> <span class="price">$2</span></p>
+            <hr>
+            <p>Totalsumma <span class="price" style="color:black"><b>$30</b></span></p>
+          </div>
+        </div>
 
         <div class="row">
           <div class="col-50">
@@ -241,7 +110,7 @@ span.price {
             <label for="fname"><i class="fa fa-user"></i> För- och efternamn</label>
             <input type="text" id="fname" name="firstname" placeholder="Namn Namnsson">
             <label for="email"><i class="fa fa-envelope"></i> Email</label>
-            <input type="text" id="email" name="email" placeholder="namn@example.com">
+            <input type="text" id="email" name="email" placeholder="namn@mail.com">
             <label for="adr"><i class="fa fa-address-card-o"></i> Adress</label>
             <input type="text" id="adr" name="address" placeholder="Storgatan 15A">
 
@@ -259,50 +128,32 @@ span.price {
 
           <div class="col-50">
             <h3>Betalning</h3>
-            <label for="cname">Namn på betalkortet</label>
+            <label for="cname">Kortnamn</label>
             <input type="text" id="cname" name="cardname" placeholder="Namn Namnsson">
             <label for="ccnum">Kortnummer</label>
             <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
-            <label for="expmonth">Utgångsdatum</label>
-            <input type="text" id="expmonth" name="expmonth" placeholder="September">
+            <label for="expmonth">Utgångsmånad</label>
+            <input type="text" id="expmonth" name="expmonth" placeholder="Oktober">
 
             <div class="row">
               <div class="col-50">
-                <label for="expyear">Exp Year</label>
-                <input type="text" id="expyear" name="expyear" placeholder="2018">
+                <label for="expyear">Utgångsår </label>
+                <input type="text" id="expyear" name="expyear" placeholder="2022">
               </div>
               <div class="col-50">
-                <label for="cvv">CVV</label>
-                <input type="text" id="cvv" name="cvv" placeholder="352">
+                <label for="cvc">CVC</label>
+                <input type="text" id="cvc" name="cvc" placeholder="352">
               </div>
             </div>
           </div>
 
         </div>
-        <label>
-          <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
-        </label>
-        <input type="submit" value="Continue to checkout" class="btn">
+        <input type="submit" value="Bekräfta köp" class="btn">
       </form>
     </div>
   </div>
 
-  <div class="col-25">
-    <div class="container">
-      <h4>Cart
-        <span class="price" style="color:black">
-          <i class="fa fa-shopping-cart"></i>
-          <b>4</b>
-        </span>
-      </h4>
-      <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-      <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-      <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-      <p><a href="#">Product 4</a> <span class="price">$2</span></p>
-      <hr>
-      <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
-    </div>
-  </div>
+
 </div>
 
 
