--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -171,8 +171,7 @@
                     <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
 
                     <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
-                            th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">Köp
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">Köp
                     </button>
                 </div>
             </div>
