Changed button colors and added favicon and CSS link to all pages

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -32,6 +32,12 @@ body {
     border-radius: 0;
 }
 
+#navbarlogo {
+    width: 50px;
+
+
+}
+
 /* Footer */
 footer {
     background-color: #D6E9F0;
@@ -44,9 +50,13 @@ footer {
     border-color: #FFDD5C;
     color: #0E2A36
 }
-
-
-
+/*
+Blue: #3190B5
+    Dark blue: #0E2A36      (e.g. navbar)
+    Light blue: #D6E9F0     (e.g. background)
+    Green: #257D5E          (e.g. logo)
+    Yellow: #FFDD5C         (e.g. for alerts)
+*/
 /***** Styling for frontpage *****/
 
 /* Product counter (cartsymbol) */
@@ -68,21 +78,32 @@ footer {
 }
 
 /* Product listing */
+.btn-primary {
+    background-color: #257D5E;
+    border-color: #257D5E;
+
+}
+
 .btn-primary:hover {
-    background:  #2098ff;
+    background-color:  #0E2A36;
     color:  #fff;
 }
 
+.panel-primary {
+    /* Background for panel */
+    border-color: #257D5E;
+}
+
 .panel-primary:hover {
-    border-color:  #2098ff;
+    border-color:  #0E2A36;
 }
 
 .panel-primary>.panel-heading {
-    background-color: #3190B5;
+    background-color: #257D5E;
 }
 
 .panel-primary>.panel-heading:hover {
-    background-color:  #2098ff;
+    background-color:  #0E2A36;
                color:  white;
 }
 
@@ -128,7 +149,6 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 
 
 
