--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>LoppisShoppis</title>
+    <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -54,7 +55,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"></a>
+<!--            <a class="navbar-brand" href="#"></a>   -->
+            <img src="/images/logga-liten.svg" id="navbarlogo">
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -179,6 +181,7 @@
     </div>
 </div><br><br>
 
+<!-- Footer -->
 <footer class="container-fluid text-center">
     <p>Bli en återvinnare!</p>
     <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
