--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title th:text="'LoppisShoppis: ' + ${product.name}"></title>
+  <title th:text="${product.name}"></title>
+  <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
