--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -34,7 +34,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
-        <button type="button" class="btn btn-primary">Gå till varukorgen</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='/cart'">Gå till varukorgen</button>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
+      <img src="/images/logga-liten.svg" id="navbarlogo" onclick="location.href='/';">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
