Mer fix med varukorg och tillhörande javascript

--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -97,9 +97,9 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li></li>
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
-                <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"><span id="cartsum" class="productcounter">0</span></span> Varukorg</a></li>
+                <li><span id="cartsum" class="productcounter">0</span></li>
+                <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
             </ul>
         </div>
     </div>
