--- a/src/main/resources/templates/AstridLindgrenCollection.html
+++ b/src/main/resources/templates/AstridLindgrenCollection.html
@@ -10,38 +10,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
-    /* Remove the navbar's default rounded borders and increase the bottom margin */
-    .navbar {
-      margin-bottom: 50px;
-      border-radius: 0;
-    }
-
-    /* Remove the jumbotron's default bottom margin */
-     .jumbotron {
-      margin-bottom: 0;
-    }
-
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #D6E9F0;
-      padding: 25px;
-    }
-
-    #footerbtn {
-      background-color: #FFDD5C;
-      border-color: #FFDD5C;
-      color: #0E2A36
-    }
-
-    #buybtn{
-      background-color: #3190B5;
-
-    }
-
-    .panel img:hover {
-  transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-
-}
 
   </style>
 </head>
@@ -68,15 +36,15 @@
   </div>
 </div>
 
-<body style="background-color: #D6E9F0;">
-
-<div class="jumbotron" style="background-color:#D6E9F0">
-  <div class="container text-center" style="color: #0E2A36">
-    <img onclick="location.href='/';" style="cursor: pointer;" src="/images/loppisshoppis3.png" height="300">
+<!-- Header with logo -->
+<div class="jumbotron">
+  <div class="container text-center">
+    <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
   </div>
 </div>
+
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid" style="background-color:#0E2A36;">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -143,7 +111,7 @@
             <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
           </div>
           <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
-          <a class="btn btn-primary " th:href="'/product/' + ${product.id}" style="cursor: pointer;">Mer info</a>
+          <a class="btn btn-primary " th:href="'/product/' + ${product.id}">Mer info</a>
 
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
             Köp
