--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -15,79 +15,7 @@
     {
         padding-top: 1em;
     }
-    /* Remove the navbar's default rounded borders and increase the bottom margin */
-    .navbar {
-      margin-bottom: 50px;
-      border-radius: 0;
-    }
 
-    /* Remove the jumbotron's default bottom margin */
-     .jumbotron {
-      margin-bottom: 0;
-    }
-
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-        .btn-primary:hover {
-      background:  #2098ff;
-      color:  #fff;
-   }
-
-   .panel-primary:hover {
-    border-color:  #2098ff;
-}
-
-.panel-primary>.panel-heading {
-    background-color: #3190B5;
-}
-
-.panel-primary>.panel-heading:hover
-    {
-    background-color:  #2098ff;
-               color:  white;
-    }
-
-  .img {
-  padding: 50px;
-  background-color: green;
-  transition: transform .2s; /* Animation */
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-  }
-
-.panel img:hover {
-  transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-
-}
-
-
-/* Tillagt för att centrera bilder på varor och ge dem samma höjd */
-#productimg {
-    padding: 10px;
-    margin: 0 auto;
-    height: 250px;
-}
-/* KOPIA AV PRODUCT.HTML */
-
-/* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #D6E9F0;
-      padding: 25px;
-    }
-
-    #footerbtn {
-      background-color: #FFDD5C;
-      border-color: #FFDD5C;
-      color: #0E2A36
-    }
-
-#myCarousel {
-    padding: 10px;
-}
   </style>
 </head>
 <body style="background-color: #D6E9F0;" onload="printCart()">
@@ -117,9 +45,10 @@
     </div>
 </div>
 
-<div class="jumbotron" style="background-color:#D6E9F0">
-    <div class="container text-center" style="color:black">
-        <img onclick="location.href='/';" style="cursor: pointer;" src="/images/loppisshoppis3.png" height="300">
+<!-- Header with logo -->
+<div class="jumbotron">
+    <div class="container text-center">
+        <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
     </div>
 </div>
 
