--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -166,6 +166,7 @@ span.price {
         <li><span id="cartsum">0</span></li>
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
+        <li><a onclick="location.href='/';" style="cursor: pointer;"><span class="glyphicon glyphicon-backward"></span> Tillbaka</a></li>
       </ul>
     </div>
   </div>
@@ -256,6 +257,8 @@ span.price {
     <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
   </form>
 </footer>
+
+<script src="shoppingcart.js"></script>
 
 </body>
 </html>
