--- a/src/main/resources/templates/AboutUs.html
+++ b/src/main/resources/templates/AboutUs.html
@@ -11,7 +11,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
 
-
 .zoom-in-out-box {
   margin: 24px;
   width: 50px;
@@ -41,27 +40,6 @@
 </head>
 <body>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Varan tillagd i varukorgen!
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 <!-- Header with logo -->
 <div class="jumbotron">
   <div class="container text-center">
@@ -69,6 +47,17 @@
   </div>
 </div>
 
+<!-- Navbar -->
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <img src="/images/logga-liten.svg" id="navbarlogo" onclick="location.href='/';">
+    </div>
 <div class="collapse navbar-collapse" id="myNavbar">
   <ul class="nav navbar-nav">
     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
@@ -133,7 +122,16 @@
   <h2>Center an Image</h2>
   <p>Vår butik värnar om miljö och produktsvinn</p>
 
+<!-- Footer -->
+<footer class="container-fluid text-center">
+  <p>Bli en återvinnare!</p>
+  <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
+    <input type="email" class="form-control" size="50" placeholder="Mejladress">
+    <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
+  </form>
+</footer>
 
+<script src="shoppingcart.js"></script>
 
 </body>
 </html>
