--- a/src/main/resources/templates/Sci-Fi.html
+++ b/src/main/resources/templates/Sci-Fi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Sci-Fi</title>
     <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,22 +14,24 @@
 </head>
 <body>
 
-<!-- Modal -->
+<!-- Modal: Cart notification -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h4 class="modal-title" id="exampleModalLabel"> En vara har lagts till i varukorgen: </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                Varan tillagd i varukorgen!
+                <ul>
+                    <li> Detta behöver uppdateras med en lista av varor </li>
+                </ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='/cart'">Gå till varukorgen</button>
             </div>
         </div>
     </div>
@@ -42,6 +44,17 @@
     </div>
 </div>
 
+<!-- Navbar -->
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <img src="/images/logga-liten.svg" id="navbarlogo" onclick="location.href='/'">
+        </div>
 <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
@@ -90,6 +103,8 @@
 </div>
 </div>
 </nav>
+
+<!-- Product image and information -->
 <div class="container">
     <div class="row">
         <div class="productlisting" th:each="product : ${products}">
@@ -110,8 +125,11 @@
         </div>
     </div>
 </div><br><br>
+
 <div id="test">
 </div>
+
+<!-- Footer -->
 <footer class="container-fluid text-center">
     <p>Bli en återvinnare!</p>
     <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
@@ -119,6 +137,8 @@
         <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
     </form>
 </footer>
+
+<script src="shoppingcart.js"></script>
 
 </body>
 </html>
