--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -10,12 +10,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-
     </style>
 </head>
 <body>
 
-<!-- Modal -->
+<!-- Modal: Cart notification -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -25,10 +24,9 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-
             <div class="modal-body">
                 <ul>
-                    <li onchange="printcart()"> Detta behöver uppdateras med en lista av varor </li>
+                    <li> Detta behöver uppdateras med en lista av varor </li>
                 </ul>
             </div>
             <div class="modal-footer">
@@ -55,7 +53,6 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-<!--            <a class="navbar-brand" href="#"></a>   -->
             <img src="/images/logga-liten.svg" id="navbarlogo" onclick="location.href='/'">
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -191,6 +188,7 @@
         <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
     </form>
 </footer>
+
 <script src="shoppingcart.js"></script>
 
 </body>
