--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-
 <head>
   <title th:text="${product.name}"></title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
@@ -11,12 +10,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
-
   </style>
 </head>
 <body>
 
-<!-- Modal -->
+<!-- Modal: Cart notification -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -26,7 +24,6 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-
       <div class="modal-body">
         <ul>
           <li> Detta behöver uppdateras med en lista av varor </li>
@@ -97,7 +94,6 @@
             <li><a href="#">Vet ej</a></li>
           </ul>
       </ul>
-
       <ul class="nav navbar-nav navbar-right">
         <li><span id="cartsum">0</span></li>
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
@@ -141,6 +137,8 @@
     <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
   </form>
 </footer>
+
+<script src="shoppingcart.js"></script>
 
 </body>
 </html>
